fixed urls; cors; samesite